# match

./: .gitignore  Arcium.toml  README.md
confessions-mxe/: Anchor.toml  Arcium.toml  Cargo.toml  package.json
confessions-mxe/artifacts/: arx_ata_2AFn_12ra.json  arx_ata_2ehx_DCeF.json  arx_ata_DLDs_S64t.json  arx_ata_recovery_peer_0.json  arx_ata_recovery_peer_1.json  arx_ata_recovery_peer_2.json  arx_ata_recovery_peer_3.json  arx_ata_recovery_peer_4.json  arx_mint.json  arx_node_2ehx_DCeF.json  arx_node_DLDs_S64t.json  arx_node_recovery_peer_0.json  arx_node_recovery_peer_1.json  arx_node_recovery_peer_2.json  arx_node_recovery_peer_3.json  arx_node_recovery_peer_4.json  check_match_raw_circuit_0.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  like_confession_raw_circuit_0.json  mxe_acc.json  mxe_key_recovery_init_comp.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  operator_acc_2ehx_DCeF.json  operator_acc_DLDs_S64t.json  operator_acc_recovery_peer_0.json  operator_acc_recovery_peer_1.json  operator_acc_recovery_peer_2.json  operator_acc_recovery_peer_3.json  operator_acc_recovery_peer_4.json  recovery_cluster_acc.json  submit_confession_raw_circuit_0.json  verify_reputation_raw_circuit_0.json  (+16 more)
confessions-mxe/programs/confessions/: Cargo.toml
confessions-mxe/programs/confessions/src/: lib.rs
confessions_mxe/: Anchor.toml  Arcium.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: collection-config.json  create-collection.js  mint-nft.js  package-lock.json  package.json
(+68 files in other folders)
